# Wheatley

./: .env.example  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  format.yml
Bootloader/: CMakeLists.txt  Makefile  elf.h  helpers.c  helpers.h  main.c  paging.c
Bootloader/inc/: assert.h  bmp3.h  elf.h  elfloader.h  helpers.h  paging.h  printf.h
Bootloader/src/: bmp3.c  elfloader.c  helpers.c  jump.asm  main.c  paging.c  printf.c
BuildSystem/: cproj.mak  defines.mak  qemu.mak
Includes/: bootproto.h  stdint.h
Kernel/: CMakeLists.txt  Makefile  assert.h  idt.c  idt.h  io.c  io.h  isr.asm  isr.c  isr.h  kernel.ld  libk.c  libk.h  main.c  panic.c  panic.h  serial.c  serial.h  stdint.h
Kernel/drivers/fb/: efifb.c  fb.c  fb.h
Kernel/drivers/tty/: fbtty.c  fbtty.h  serialtty.c  serialtty.h  tty.c
Kernel/inc/: assert.h  deepMain.h  libk.h  panic.h  string.h
Kernel/inc/drivers/fb/: efifb.h  fb.h
Kernel/inc/drivers/timer/: apic.h  hpet.h
Kernel/inc/drivers/tty/: fbtty.h  tty.h
Kernel/inc/fw/: acpi.h  apic.h  madt.h
Kernel/inc/mm/: internal.h  mm.h  vmm.h
Kernel/inc/sched/: kernel.h  sched.h
Kernel/inc/sys/: apic.h  cpuid.h  gdt.h  idt.h  io.h  isr.h  mmio.h  msr.h  pci.h  pcrb.h  smp.h  spinlock.h
Kernel/mm/: init.c  init.h  internal.c  mm.c
Kernel/src/: deepMain.c  libk.c  main.c  panic.c  printf.c  ring3test.asm  string.asm  string.c
Kernel/src/acpi/: laihost.c
Kernel/src/drivers/fb/: efifb.c  fb.c
Kernel/src/drivers/timer/: apic.c  hpet.c
Kernel/src/drivers/tty/: fbtty.c  serialtty.c  tty.c
Kernel/src/fw/: acpi.c  apic.c  laihost.c  madt.c
Kernel/src/mm/: init.c  internal.c  mm.c  vmm.c
Kernel/src/sched/: kernel.c  sched.c
Kernel/src/sys/: apic.c  cpuid.c  gdt.asm  gdt.c  idt.c  io.c  isr.asm  isr.c  pci.c  pcrb.c  smp.asm  smp.c
cmake/: QEMU.cmake
dev/: fat32.sh  format.sh  qemu.sh
